--- a/index.html
+++ b/index.html
@@ -123,28 +123,7 @@
             <a class="navbar-brand bg-" href="index.html"><img class="-circle"
                     src="src/images/logo-Apoc-2022.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="#">الرئيسية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/about.html">عن الجمعية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/photos.html"> البوم الصور </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
-                    </li>
-                    
-                </ul> -->
-                <ul class="navbar-nav m-0 p-0 text-center bg- ms-3 me-auto mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav m-0 p-0 text-center bg- me-4 mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
@@ -169,28 +148,7 @@
             <a class="navbar-brand bg-" href="index.html"><img class="-circle"
                     src="src/images/logo-Apoc-2022.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="#">الرئيسية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/about.html">عن الجمعية</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/photos.html"> البوم الصور </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
-                    </li>
-                    
-                </ul> -->
-                <ul class=" me-3 navbar-nav text-center  mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav m-0 p-0 text-center bg- me-4 mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
