--- a/src/calculation.html
+++ b/src/calculation.html
@@ -18,7 +18,7 @@
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
             <a class="navbar-brand" href="../index.html"><img class="r-circle"
-                    src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
+                    src="images/logo-Apoc-2022.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -66,12 +66,12 @@
             </div>
         </div>
     </nav>
-    <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
+    <nav id="smNav" class="navbar overflow-hidden d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="../index.html"><img class="ed-circle" src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png"
+            <a class="navbar-brand bg-" href="../index.html"><img class="ed-circle" src="images/logo-Apoc-2022.png"
                     alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <ul class="ms-3 me-auto navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav ms-3 me-4 m-0 p-0 text-center mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
