--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a class="navbar-brand bg-" href="index.html"><img class="-circle"
                     src="src/images/logo-Apoc-2022.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <ul class="navbar-nav m-0 p-0 text-center bg- me-4 mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav p-0 text-center bg- me-auto ms-3 mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
