--- a/src/cancel.html
+++ b/src/cancel.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
-
+<!-- ****************** -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Marhey:wght@300..700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Marhey:wght@300..700&display=swap"
+        rel="stylesheet">
+    <!-- ****************** -->
     <title>Apoc 3939/ خطأ في العملية </title>
 </head>
 
@@ -96,14 +107,14 @@
         <img class="w-50 mt-3 rounded-circle" src="images/tbro3 3.jpg" alt="">
     </section>
 
-    <footer id="footer" class="w-100 d- py-5 bg-body-tertiary">
+    <footer id="footer" class="w-100 py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/logo.jpg" alt=""></a>
+                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png" alt=""></a>
                     </div>
-                    <div class="col-md-4 my-3">
+                    <div class="col-md-4 w-sm-100 my-3">
                         <div class="d-flex w-75 m-auto bg- h-100 align-items-center icons justify-content-around">
                             <div
                                 class="icon mx-1 pointer d-flex align-items-center justify-content-center rounded-circle">
@@ -127,7 +138,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 text-white">
+                    <div class="col-md-4 w-sm-100 text-white">
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
@@ -147,11 +158,11 @@
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
-                            <p class="me-2 m-0"> 2034839839<span>+</span></p>
+                            <p class="me-2 m-0">01202223939 / 2034839839<span>+</span></p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-brands text-success fa-  fa-whatsapp"></i>
-                            <p class="me-2 m-0">01202223939 / 01007770399</p>
+                            <p class="me-2 m-0">01007770399</p>
                             <!-- <p class="me-2 m-0">01007770399</p> -->
                         </div>
                         <div class="d-flex my-3 align-items-center">
