--- a/src/register.html
+++ b/src/register.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
-
+<!-- ****************** -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Marhey:wght@300..700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Marhey:wght@300..700&display=swap"
+        rel="stylesheet">
+    <!-- ****************** -->
     <title>Apoc 3939/اتبرع الآن </title>
 </head>
 
@@ -71,7 +82,7 @@
             <a class="navbar-brand bg-" href="../index.html"><img class="r-circle" src="images/logo-Apoc-2022.png"
                     alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-3 me-4 m-0 p-0 text-center mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav p-0 text-center bg- me-auto ms-3 mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
@@ -122,9 +133,9 @@
             <div class="container bg-">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/logo.jpg" alt=""></a>
+                        <a href="../index.html"> <img class="w-100 rounded-circle" src="images/final img/pp-.png" alt=""></a>
                     </div>
-                    <div class="col-md-4 my-3">
+                    <div class="col-md-4 w-sm-100 my-3">
                         <div class="d-flex w-75 m-auto bg- h-100 align-items-center icons justify-content-around">
                             <div
                                 class="icon mx-1 pointer d-flex align-items-center justify-content-center rounded-circle">
@@ -148,13 +159,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 text-white">
+                    <div class="col-md-4 w-sm-100 text-white">
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
                             <p class="me-2 m-0">
                             <ol class="pe-3" type="i">
-                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني – شقة 9
+                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
+                                    شقة 9
                                     – بجوار القائد إبراهيم.</li>
                                 <li class="mb-2 my-text-location">مركز محمد رشيد لعلاج الأورام – الدور الثاني –
                                     الأزاريطة – على الترام أمام بريوني
@@ -167,11 +179,11 @@
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
-                            <p class="me-2 m-0"> 2034839839<span>+</span></p>
+                            <p class="me-2 m-0">01202223939 / 2034839839<span>+</span></p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-brands text-success fa-  fa-whatsapp"></i>
-                            <p class="me-2 m-0">01202223939 / 01007770399</p>
+                            <p class="me-2 m-0">01007770399</p>
                             <!-- <p class="me-2 m-0">01007770399</p> -->
                         </div>
                         <div class="d-flex my-3 align-items-center">
