--- a/src/about.html
+++ b/src/about.html
@@ -134,7 +134,7 @@
     <section id="whoWeAre" class="d- bg-body-tertiary py-3 my-">
         <div class="container">
             <div class="mb-5 pb-3">
-                <h3 class="h1 text-success mb-5 w-50 m- py-3 border-bottom border-1">نبذة عن الجمعية</h3>
+                <h3 class="h1 text-success mb-5 w-50 m- py-3 border-bottom border-1 introHead">نبذة عن الجمعية</h3>
                 <p class="lead fw-medium text-muted">تأسست الجمعية في عام 2012</p>
                 <p class="lead fw-medium text-muted">توفر جمعية مستشفى سرطان أطفال إسكندرية
                     كل ما يحتاجه الأطفال مرضى السرطان من علاج
