--- a/index.html
+++ b/index.html
@@ -179,15 +179,25 @@
         </div>
     </nav>
     <!-- 0000000000000000000000 -->
-    <header id="main" class="d-flex overflow-hidden align-items- position-relative justify-content-start">
-        <div b class="position-absolute head-container d-flex flex-column me-4 justify-content-center">
-            <div class="d-flex flex-column bg-">
-                <a href="#whoWeAre" class="text-decoration-none w-25 my-1"><button
-                        class="btn delay-2s btn-warning position- fw-bolder py-3 rounded-start-5">قصتنا
-                    </button></a>
-                <a href="#tbro3" class="text-decoration-none bg- w-25 my-1"><button
-                        class="btn delay-2s btn-success position- fw-bolder py-3 rounded-start-5">تبرع
-                        الآن</button></a>
+    <header id="main" class=" position-relative">
+        <div id="carouselExampleInterval" class="carousel d-flex slide" data-bs-ride="carousel">
+            <div class="carousel-inner ">
+                <div class="carousel-item active position-relative " data-bs-interval="5000">
+                    <img src="src/images/cover-photo-1920-x-1080.png" class=" d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="60000">
+                    <video src="src/images/final img/video.mp4" muted autoplay class="d-block w-100"></video>
+                </div>
+            </div>
+            <div b class="position-absolute head-container d-flex flex-column me-4 justify-content-center">
+                <div class="d-flex flex-column bg-">
+                    <a href="#whoWeAre" class="text-decoration-none w-25 my-1"><button
+                            class="btn delay-2s btn-warning position- fw-bolder py-3 rounded-start-5">قصتنا
+                        </button></a>
+                    <a href="#tbro3" class="text-decoration-none bg- w-25 my-1"><button
+                            class="btn delay-2s btn-success position- fw-bolder py-3 rounded-start-5">تبرع
+                            الآن</button></a>
+                </div>
             </div>
         </div>
     </header>
@@ -342,7 +352,8 @@
                                     <button id="moneyBtn" onclick="getData()" class="btn btn-primary">اعرف
                                         القيمة</button>
                                 </div>
-                                <h5 class="bg-body-tertiary mt-3 text-dark">قيمة زكاة النقود : <span id="salary">0</span> جنيه
+                                <h5 class="bg-body-tertiary mt-3 text-dark">قيمة زكاة النقود : <span
+                                        id="salary">0</span> جنيه
                                 </h5>
                             </div>
                         </div>
@@ -351,7 +362,8 @@
                         <div class="my-3 bg-">
                             <div
                                 class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 p-4 ">
-                                <h2 class="bg-body-tertiary fw-bold text-dark">إجمالي قيمة الزكاة : <span id="total" class="text-success fs-3">.</span> جنيه
+                                <h2 class="bg-body-tertiary fw-bold text-dark">إجمالي قيمة الزكاة : <span id="total"
+                                        class="text-success fs-3">.</span> جنيه
                                 </h2>
                             </div>
                         </div>
