--- a/src/photos.html
+++ b/src/photos.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                        <a class="nav-link text-  fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
@@ -42,7 +42,7 @@
                         <a class="nav-link text- fw-bold" href="#"> العناوين </a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
+                        <a class="nav-link text- active fw-bold" href="photos.html"> البوم الصور </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
