--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link text- fw-bold" href="#"> العناوين </a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/photos.html"> البوم الصور </a>
+                        <a class="nav-link fw-bold" href="src/photos.html"> البوم الصور </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
@@ -185,9 +185,9 @@
                 <div class="carousel-item active position-relative " data-bs-interval="5000">
                     <img src="src/images/cover-photo-1920-x-1080.png" class=" d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item" data-bs-interval="60000">
+                <!-- <div class="carousel-item" data-bs-interval="120000">
                     <video src="src/images/final img/video.mp4" muted autoplay class="d-block w-100"></video>
-                </div>
+                </div> -->
             </div>
             <div b class="position-absolute head-container d-flex flex-column me-4 justify-content-center">
                 <div class="d-flex flex-column bg-">
