--- a/src/about.html
+++ b/src/about.html
@@ -33,10 +33,10 @@
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                        <a class="nav-link text-  fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
+                        <a class="nav-link text- active fw-bold" href="about.html">عن الجمعية</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#"> العناوين </a>
