--- a/src/register.html
+++ b/src/register.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
+                        <a class="nav-link text- fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
@@ -48,7 +48,7 @@
                         <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
+                        <a class="nav-link text- active fw-bold" href="register.html"> اتبرع الآن</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
