--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
     </nav>
     <!-- 0000000000000000000000 -->
-    <header id="main" class=" position-relative">
+    <header id="main" class="bg-danger position-relative">
         <div id="carouselExampleInterval" class="carousel d-flex slide" data-bs-ride="carousel">
             <div class="carousel-inner ">
                 <div class="carousel-item active position-relative " data-bs-interval="5000">
