--- a/src/register.html
+++ b/src/register.html
@@ -123,7 +123,7 @@
             </div>
 
             <button type="" id="paymentBtn" class=" btn btn-success w-100 mt-4">اتبرع الآن</button>
-            <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-danger">users</a>
+            <a href="allUsersForAdmin.html" class="w-100 mt-4 btn btn-secondary">users <span class="fw-bolder text-dark">*(Admins Only)</span></a>
         </form>
 
     </section>
