--- a/src/allUsersForAdmin.html
+++ b/src/allUsersForAdmin.html
@@ -101,8 +101,23 @@
         </div>
     </nav>
 
-    <section class="text-center">
-        <button id="getBtn" class="w-50 my-4 btn btn-danger">users</button>
+    <section class="container my-3">
+        <form action="" class="w-75 h-100 m-auto p-4 bg-body-tertiary rounded-2" >
+            <div class="my-3">
+                <label class=" mb-1" for="adminName">اسم المستخدم</label>
+                <input value="" id="adminName" class=" form-control" type="text">
+            </div>
+            <div class="my-3">
+                <label class=" mb-1" for="adminPassword">كلمة السر</label>
+                <input value="" id="adminPassword" class=" form-control" type="password">
+            </div>
+
+            <button id="getBtn" class="btn btn-secondary w-100 mt-5">get all users</button>
+        </form>
+    </section>
+
+    <section id="userTable" class="d-none text-center">
+        <button id="" class="w-50 my-4 btn btn-danger">users</button>
         <table class="table text-center">
             <thead class="fw-bold">
                 <th>رقم</th>
