--- a/src/allUsersForAdmin.html
+++ b/src/allUsersForAdmin.html
@@ -112,12 +112,19 @@
                 <input value="" id="adminPassword" class=" form-control" type="password">
             </div>
 
-            <button id="getBtn" class="btn btn-secondary w-100 mt-5">get all users</button>
+            <button id="displayUserTableBtn" class="btn btn-secondary w-100 mt-5">get all users</button>
         </form>
     </section>
 
-    <section id="userTable" class="d-none text-center">
-        <button id="" class="w-50 my-4 btn btn-danger">users</button>
+    <section id="dangerMsg" class="container my-3 rounded-2 d-none bg-danger-subtle p-3 text-center text-danger">
+        <div>
+            <p class="m-0 my-1">!!! user name or password is not correct</p>
+            <p class="m-0 my-1">!!! please register again as admin</p>
+        </div>
+    </section>
+
+    <section id="userTable" class="d-none container-md text-center">
+        <!-- <button id="getBtn" class="w-75 my-4 btn btn-success">View All Users</button> -->
         <table class="table text-center">
             <thead class="fw-bold">
                 <th>رقم</th>
